# gisdataagent

./: .dockerignore  .env.example  .gitignore  .mcp.json  AgentOps能力要求技术规范.md  Analysis_Report.docx  Architecture_Review_and_Refactoring_Plan.md  CHANGELOG.md  CLAUDE.md  Data_Agent_竞品分析报告.md  Dockerfile  Dadkdebug_log.txt  Multimodal_Semantic_Fusion_Architecture.md  Online FlowChart & Diagrams Editor - Mermaid Live Editor.mhtml  PRD_GIS_Data_Agent_V1.md  QUICKSTART.md  README.md  README_en.md  Silicon_Genesis.pptx  chainlit.md  doc_content.txt  doc_full_structure.txt  doc_structure.txt  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  docker-db-init.sql  docker-entrypoint.sh  error_extract.txt  generate_dirty_data.py  generate_logo.py  generate_realistic_dirty_data.py  import_shp_to_pg.py  monitor_workflow.py  pdf_extract.txt  preview_docs.py  pyproject.toml  requirements.txt  resize_logo.py  test_hang.py  (+9 more)
.chainlit/: config.toml
benchmarks/: README.md  baseline_gemini_3.1_pro_report.json  baseline_gemma2_27b_report.json  baseline_gemma4_31b_report.json  bird_chinese_100_benchmark.json  bird_chinese_50q_review.csv  bird_chinese_50q_reviewed.json  bird_pg_heldout_150.json  chongqing_geo_nl2sql_100_benchmark.json  chongqing_geo_nl2sql_125q_business_lang.json  chongqing_geo_nl2sql_125q_business_lang_pilot.json  chongqing_geo_nl2sql_125q_clean.json  chongqing_geo_nl2sql_benchmark.json  chongqing_geo_nl2sql_full_benchmark.json  chongqing_geo_nl2sql_full_benchmark_v2.json  cq_robust_40q.json  generate_benchmark_data.py  gis_spatial_30q_subset.json  run_benchmarks.py  run_chongqing_geo_eval.py
data_agent/: .env.example  Analysis_Report.docx  FFI.py  __init__.py  __main__.py  a2a_server.py  adk_sessions_v1.db  advanced_analysis.py  agent.py  agent_composer.py  agent_decision_tracer.py  agent_hooks.py  agent_messaging.py  agent_registry.py  analysis_chains.py  annotation_ws.py  api_middleware.py  app.py  arcpy_tools.py  arcpy_worker.py  artifact_handler.py  asset_coder.py  audit_logger.py  auth.py  benchmark_fusion.py  bot_base.py  capabilities.py  circuit_breaker.py  (+342 more)
gis-skill-sdk/: README.md  pyproject.toml
gis-skill-sdk/src/gis_skill_sdk/: __init__.py  base_skill.py  cli.py  loader.py  metadata.py  validator.py
gis-skill-sdk/src/gis_skill_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gis-skill-sdk/tests/: test_base_skill.py
(+1118 files in other folders)
