[project]
name = "gis-data-agent"
version = "23.0.0"
description = "AI-powered geospatial analysis platform built on Google ADK"
requires-python = ">=3.11"

# Core dependencies — minimal set for Lite mode (General Pipeline + DuckDB)
dependencies = [
    "google-adk>=1.27",
    "google-genai>=1.0",
    "chainlit>=2.0",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "duckdb>=0.10",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "folium>=0.15",
    "branca>=0.7",
    "Pillow>=10.0",
    "openpyxl>=3.1",
    "python-docx>=1.0",
    "argon2-cffi>=25.0",
    "PyJWT>=2.8",
]

[project.optional-dependencies]
# Full deployment — PostGIS + DRL + World Model + Remote Sensing + all toolsets
full = [
    # PostGIS / async DB
    "asyncpg>=0.31",
    "psycopg2-binary>=2.9",
    # DRL optimization
    "torch>=2.0",
    "stable-baselines3>=2.0",
    "sb3-contrib>=2.0",
    "gymnasium>=0.29",
    # Remote sensing
    "rasterio>=1.3",
    "rasterstats>=0.19",
    # Spatial statistics
    "pysal>=24.1",
    "esda>=2.5",
    "libpysal>=4.9",
    "mapclassify>=2.6",
    # Knowledge graph
    "networkx>=3.2",
    # World model
    "imageio>=2.34",
    # A2A protocol
    "a2a-sdk>=0.3",
    # Redis (distributed mode)
    "redis>=5.0",
    # Monitoring
    "prometheus-client>=0.20",
    # Cloud storage
    "boto3>=1.42",
    # Vector tiles
    "aiofiles>=24.0",
]

# Development / testing
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.23",
    "coverage>=7.0",
]

[project.scripts]
gis-agent = "data_agent.lite_mode:_cli_main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["data_agent*"]
