[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gis-skill-sdk"
version = "0.1.0"
description = "SDK for building GIS Data Agent skills"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
gis-skill = "gis_skill_sdk.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
